# simpl-cloud

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: test.yml
client/: Makefile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: main.ts
client/src/balancing/: Balancing.svelte  InactivePlayers.svelte  Instructions.svelte  Loader.svelte  NavManageTeams.svelte  NavStartGame.svelte  Players.svelte  StatusBox.svelte  Team.svelte  TeamEdit.svelte  Teams.svelte  crossfade.js  index.ts  stores.js  stores.ts  utils.js
client/src/components/: AutoBalance.svelte  Dropdown.svelte  Loader.svelte  Modal.svelte  Player.svelte  Switcher.svelte  SwitcherOption.svelte  TeamRename.svelte
client/src/js/: index.ts
client/src/queries/: balancing.graphql
simpl/: __init__.py  admin.py  apps.py  auth0.py  constants.py  managers.py  models.py  nav.py  receivers.py  urls.py  views.py
simpl/conf/: __init__.py  app_settings.py
simpl/migrations/: 0001_initial.py  0002_run_data.py  0003_auto_20210701_1047.py  0004_rename_token_apitoken.py  0005_auto_20210707_0934.py  0005_auto_20210712_0038.py  0006_auto_20210712_0240.py  0007_shorten_lobby_name.py  0008_merge_20210727_1117.py  0009_player_inactive.py  0010_class.py  0011_gameexperience_experience_id.py  0012_remove_lobby_ready.py  0013_gameexperience_multiplayer.py  0014_auto_20210903_1514.py  0015_lobby_instance.py  0016_link_lobby_instances.py  0017_run_date_continuous_end.py  0018_apitoken_name.py  0019_auto_20211027_1812.py  0020_auto_20211109_2056.py
simpl/schema/: __init__.py  mutations.py  query.py  types.py
simpl/templatetags/: includecontents.py  simpl.py
simpl/testapp/: apps.py  models.py
simpl/tests/: settings.py  test_external_schema.py  test_models.py  test_simpl.py  test_utils.py
simpl/utils/: models.py  name_faker.py
simpl_cloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+79 files in other folders)
