[metadata]
name = simpl-cloud
version = 1.2
description = Base models and API for Django-based simulations.
long_description = file: README.rst
author = Chris Beaven
author_email = smileychris@gmail.com
url = https://github.com/Wharton-Interactive/simpl-cloud
keywords = api simulation administration
license = GPL2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Faker
    mmh3
    murmurhash3
    graphene-django
    django-allauth
    packaging

[options.extras_require]
api =
    auth0-python
maintainer =
    zest.releaser[recommended]
dev =
    tox
    black
    django
    pytest
    pytest-django
test =
    pytest
    pytest-django
    pytest-cov
    model-bakery
    auth0-python
    psycopg2-binary

[bdist_wheel]
# Python 3 only. Having this section section triggers zest to build a wheel.
universal = 0

[flake8]
exclude =
    .tox
    .git
    __pycache__
    build
    dist
# black-compatible settings
max-line-length = 88
ignore = E203,W503

[coverage:run]
source = simpl

[zest.releaser]
less-zeros = yes
version-levels = 2
tag-format = v{version}
tag-message = Version {version}
date-format = %%-d %%B %%Y

[tool:pytest]
DJANGO_SETTINGS_MODULE = simpl.tests.settings
filterwarnings =
    ignore::DeprecationWarning:graphene
